# aligator-cmake-example-project

./: .gersemirc  .pre-commit-config.yaml  CMakeLists.txt  README.md  main.cpp  pixi.toml
.github/workflows/: macos-linux-pixi.yml
cpp-extension/: CMakeLists.txt  module.cpp
scripts/pixi/: activation.sh
